feat: Enhance application with new features and refinements
- **UI/UX Improvements:**
  - Updated the application title in `index.html` to "KKM International | GMEL Geothermal Vision".
  - Added text selection disabling and right-click context menu disabling in `index.html` for better user experience and to prevent accidental content copying.
  - Modified the KKM logo rendering in `App.tsx` to use `w-auto` for better aspect ratio scaling.
  - Updated navigation button active state styling in `App.tsx` to use a more prominent `bg-amber-600`.
  - Enhanced `DataCard` component in `Dashboard.tsx` with hover effects for interactivity, changed text colors for better readability, and adjusted font sizes for emphasis.
  - Updated `COLORS` arrays in `Dashboard.tsx` and `Financials.tsx` for a more consistent and appealing visual theme.

- **Functionality & Refinements:**
  - Corrected `continueChat` function in `geminiService.ts` to properly initialize chat history, ensuring accurate context for conversational turns.
  - Introduced new components: `Correspondence` and `AccessControl`, and added their corresponding views to the `App.tsx` navigation.
  - Updated `Financials.tsx` to use `baseInitialInvestment` and `baseAnnualRevenue` variables, indicating a potential refactoring or preparation for more complex financial calculations.
  - Adjusted the styling and content of the `DataCard` component in `Dashboard.tsx` to highlight key metrics more effectively.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KKM International | GMEL Vision</title>
+    <title>KKM International | GMEL Geothermal Vision</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,6 +12,9 @@
     <style>
       body {
         font-family: 'Inter', sans-serif;
+        -webkit-user-select: none; /* Safari */
+        -ms-user-select: none; /* IE 10+ */
+        user-select: none; /* Standard syntax */
       }
     </style>
   <script type="importmap">
@@ -31,5 +34,9 @@
   <body class="bg-slate-900 text-slate-100">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
+    <script>
+      // Disable right-click context menu
+      document.addEventListener('contextmenu', event => event.preventDefault());
+    </script>
   </body>
 </html>
