feat: Enhance dashboard with animations and new regions
Adds a "pop-in" animation for completed milestones on the dashboard to visually highlight progress.
Expands supported regions in the application to include 'Oman' and 'Saudi Arabia', enabling broader regional analysis.
Introduces a global search component to facilitate user navigation across the application.
Fixes a bug in the Gemini API service where `toolConfig` was incorrectly nested.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
       [dir="rtl"] {
         font-family: 'Vazirmatn', sans-serif;
       }
+      @keyframes pop-in {
+        0% { transform: scale(0.5); opacity: 0; }
+        70% { transform: scale(1.1); opacity: 1; }
+        100% { transform: scale(1); }
+      }
+      .milestone-completed {
+        animation: pop-in 0.6s ease-out forwards;
+      }
     </style>
   <script type="importmap">
 {
