--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
       .milestone-completed {
         animation: pop-in 0.6s ease-out forwards;
       }
+      @keyframes draw-line {
+        to { stroke-dashoffset: 0; }
+      }
+      .connector-line {
+        stroke-dasharray: 1000;
+        stroke-dashoffset: 1000;
+        animation: draw-line 2s ease-out forwards;
+      }
     </style>
   <script type="importmap">
 {
