--- a/index.html
+++ b/index.html
@@ -41,6 +41,44 @@
         stroke-dashoffset: 1000;
         animation: draw-line 2s ease-out forwards;
       }
+      .auth-background {
+        background-color: #020617; /* slate-950 */
+        background-image: radial-gradient(circle at 1px 1px, rgba(255,255,255,0.05) 1px, transparent 0);
+        background-size: 20px 20px;
+        position: fixed;
+        inset: 0;
+        z-index: -1;
+      }
+
+      @keyframes slide-in-fade {
+        from {
+          opacity: 0;
+          transform: translateY(20px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+
+      .auth-step-container {
+        animation: slide-in-fade 0.5s ease-out forwards;
+      }
+      
+      .nda-scrollbar::-webkit-scrollbar {
+        width: 8px;
+      }
+      .nda-scrollbar::-webkit-scrollbar-track {
+        background: #1e293b; /* slate-800 */
+        border-radius: 4px;
+      }
+      .nda-scrollbar::-webkit-scrollbar-thumb {
+        background: #475569; /* slate-600 */
+        border-radius: 4px;
+      }
+      .nda-scrollbar::-webkit-scrollbar-thumb:hover {
+        background: #64748b; /* slate-500 */
+      }
     </style>
   <script type="importmap">
 {
