--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
     "recharts": "https://aistudiocdn.com/recharts@^3.3.0",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.26.0",
     "jspdf": "https://aistudiocdn.com/jspdf@^2.5.1",
-    "jspdf-autotable": "https://aistudiocdn.com/jspdf-autotable@^3.8.2"
+    "jspdf-autotable": "https://aistudiocdn.com/jspdf-autotable@^3.8.2",
+    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0"
   }
 }
 </script>
