--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -116,6 +115,7 @@
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.26.0",
     "jspdf": "https://aistudiocdn.com/jspdf@^2.5.1",
     "jspdf-autotable": "https://aistudiocdn.com/jspdf-autotable@^3.8.2",
+    "html2canvas": "https://aistudiocdn.com/html2canvas@^1.4.1",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0"
   }
 }
